Prototyping notebbok for loader

--- a/two_step_mask_learning/notebooks/prototyping_wsj2_loader.ipynb
+++ b/two_step_mask_learning/notebooks/prototyping_wsj2_loader.ipynb
@@ -26,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a torch loader from the initial .wav files \n",
     "print(WSJ0_MIX_2_8K_PATH)\n",
     "print(WSJ0_MIX_2_16K_PATH)\n",
     "# def WSJ0Loader(Dataset):\n",
@@ -106,7 +105,7 @@
     "    return len(unique_ids)\n",
     "\n",
     "before = time.time()\n",
-    "n_files = analyze_wsj0mix(WSJ0_MIX_2_16K_PATH)\n",
+    "n_files = analyze_wsj0mix(WSJ0_MIX_2_8K_PATH)\n",
     "now = time.time()\n",
     "print(\"Read {} files in {} secs\".format(n_files, now - before))"
    ]
@@ -116,7 +115,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Preprocess WSJ0 mix dataset in order to be in universal format\n",
+    "class WSJPytorchDataset(Dataset):\n",
+    "    \"\"\"Dataset class for time-domian speech separation.\"\"\"\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 dirpath,\n",
+    "                 sample_clip_size=4):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            sample_clip_size: segmental length (default: 4s)\n",
+    "        \"\"\"\n",
+    "        self.dirpath = dirpath \n",
+    "        self.fs = self.infer_sampling_rate(self.dirpath)\n",
+    "        print(self.fs)\n",
+    "        \n",
+    "    @staticmethod \n",
+    "    def infer_sampling_rate(self, dirpath)\n",
+    "        \n",
+    "        print(dirpath)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.retrieve_index)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        utt_id, sample_index = self.retrieve_index[index]\n",
+    "        mix_sample = wavread(self.mix_path[utt_id])[0]\n",
+    "        s1_sample = wavread(self.s1_path[utt_id])[0]\n",
+    "        s2_sample = wavread(self.s2_path[utt_id])[0]\n",
+    "        if sample_index == -1:\n",
+    "            length = len(mix_sample)\n",
+    "            stack_length = self.segment_length - length\n",
+    "            mix_stack_sample = mix_sample[: stack_length].reshape(-1, 1)\n",
+    "            s1_stack_sample = s1_sample[: stack_length].reshape(-1, 1)\n",
+    "            s2_stack_sample = s2_sample[: stack_length].reshape(-1, 1)\n",
+    "            mix_clipped_sample = np.concatenate(\n",
+    "                    (mix_sample, mix_stack_sample), axis=0)\n",
+    "            s1_clipped_sample = np.concatenate(\n",
+    "                    (s1_sample, s1_stack_sample), axis=0)\n",
+    "            s2_clipped_sample = np.concatenate(\n",
+    "                    (s2_sample, s2_stack_sample), axis=0)\n",
+    "        else:\n",
+    "            end_index = sample_index + self.segment_length\n",
+    "            mix_clipped_sample = mix_sample[sample_index : end_index]\n",
+    "            s1_clipped_sample = s1_sample[sample_index : end_index]\n",
+    "            s2_clipped_sample = s2_sample[sample_index : end_index]\n",
+    "        src_clipped_sample = np.stack(\n",
+    "            (s1_clipped_sample, s2_clipped_sample), axis=0).squeeze(-1)\n",
+    "        sample = {\n",
+    "            'mix': mix_clipped_sample.reshape(1, -1),\n",
+    "            'src': src_clipped_sample.reshape(2, -1),\n",
+    "        }\n",
+    "        return sample\n"
+   ]
   },
   {
    "cell_type": "code",
