Rename the TDCN class for easier looking up to the paper reference

--- a/two_step_mask_learning/notebooks/figures.ipynb
+++ b/two_step_mask_learning/notebooks/figures.ipynb
@@ -98,7 +98,8 @@
    "outputs": [],
    "source": [
     "simple_tasnet_model_path = '/home/thymios/tn_mask/augmented/WSJMIX_0.5_ESC50_0.5/'\n",
-    "a_tasnet_model = simple_tasnet.GLNFullThymiosCTN.load_best_model(simple_tasnet_model_path, 128, 21)\n",
+    "a_tasnet_model = simple_tasnet.TDCN.load_best_model(\n",
+    "    simple_tasnet_model_path, 128, 21)\n",
     "mask_enc = a_tasnet_model.fe[0].weight.detach().cpu().squeeze().numpy().T\n",
     "mask_dec = a_tasnet_model.be.weight.detach().cpu().squeeze().numpy().T\n",
     "# print the encoder \n",
@@ -386,7 +387,7 @@
    "source": [
     "# do the same for the trained tasnet\n",
     "simple_tasnet_model_path = '/home/thymios/tn_mask/augmented/WSJMIX_0.5_ESC50_0.5/'\n",
-    "a_tasnet_model = simple_tasnet.GLNFullThymiosCTN.load_best_model(simple_tasnet_model_path, 128, 21)\n",
+    "a_tasnet_model = simple_tasnet.TDCN.load_best_model(simple_tasnet_model_path, 128, 21)\n",
     "# mask_enc = a_mask_model.encoder\n",
     "# mask_dec = a_mask_model.decoder\n",
     "\n",
